work with mistakes
"UL" is everywear

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   <body>
     <header class="header">
       <!--logo container-->
-      <div>
-        <a
-          class="logo-style link"
-          href="./index.html"
-          aria-label="логотип webstudio"
-          >Web<span class="logo-darkside">Studio</span></a
-        >
-      </div>
+
+      <a
+        class="logo-style link"
+        href="./index.html"
+        aria-label="логотип webstudio"
+        >Web<span class="logo-darkside">Studio</span></a
+      >
 
       <!--navigation container-->
       <nav>
@@ -73,119 +72,116 @@
       <section class="dowedo-container">
         <!--what do we do LIST-->
 
-        <div>
-          <dl>
-            <dt class="dowedo-list">Внимание к деталям</dt>
-            <dd class="dowedo-description">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции
-            </dd>
-            <dt class="dowedo-list">Пунктуальность</dt>
-            <dd class="dowedo-description">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </dd>
-            <dt class="dowedo-list">Планирование</dt>
-            <dd class="dowedo-description">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </dd>
-            <dt class="dowedo-list">Современные технологии</dt>
-            <dd class="dowedo-description">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </dd>
-          </dl>
-        </div>
+        <ul class="list">
+          <li class="dowedo-list">Внимание к деталям</li>
+          <li class="dowedo-description">
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции
+          </li>
+          <li class="dowedo-list">Пунктуальность</li>
+          <li class="dowedo-description">
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </li>
+          <li class="dowedo-list">Планирование</li>
+          <li class="dowedo-description">
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </li>
+          <li class="dowedo-list">Современные технологии</li>
+          <li class="dowedo-description">
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </li>
+        </ul>
         <!--what do we do PICS-->
-        <div>
-          <dl>
-            <dt class="dowedo-pics-heading">Чем мы занимаемся</dt>
-            <dd>
-              <img
-                src="./pics/WebStudioimg1.jpg"
-                width="370"
-                height="294"
-                alt="typing text"
-              />
-            </dd>
-            <dd>
-              <img
-                src="./pics/WebStudioimg2.jpg"
-                width="370"
-                height="294"
-                alt="scrolling text"
-              />
-            </dd>
-            <dd>
-              <img
-                src="./pics/WebStudioimg3.jpg"
-                width="370"
-                height="294"
-                alt="holding tablet"
-              />
-            </dd>
-          </dl>
-        </div>
+
+        <ul class="list">
+          <li class="dowedo-pics-heading">Чем мы занимаемся</li>
+          <li>
+            <img
+              src="./img/WebStudioimg1.jpg"
+              width="370"
+              height="294"
+              alt="typing text"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/WebStudioimg2.jpg"
+              width="370"
+              height="294"
+              alt="scrolling text"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/WebStudioimg3.jpg"
+              width="370"
+              height="294"
+              alt="holding tablet"
+            />
+          </li>
+        </ul>
       </section>
 
       <!--our team container-->
       <section class="ourteam-container">
         <h2 class="ourteam-heading">Наша команда</h2>
-        <dl>
-          <dt>
+        <ul class="list">
+          <li>
             <img
-              src="./pics/igor.jpg"
+              src="./img/igor.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-          </dt>
-          <dd class="ourteam-list-names">Игорь Демьяненко</dd>
-          <dd class="ourteam-list-description">Product Designer</dd>
-          <dt>
+          </li>
+          <li class="ourteam-list-names">Игорь Демьяненко</li>
+          <li class="ourteam-list-description">Product Designer</li>
+          <li>
             <img
-              src="./pics/olga.jpg"
+              src="./img/olga.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-          </dt>
-          <dd class="ourteam-list-names">Ольга Репина</dd>
-          <dd class="ourteam-list-description">Frontend Developer</dd>
-          <dt>
+          </li>
+          <li class="ourteam-list-names">Ольга Репина</li>
+          <li class="ourteam-list-description">Frontend Developer</li>
+          <li>
             <img
-              src="./pics/nikolai.jpg"
+              src="./img/nikolai.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-          </dt>
-          <dd class="ourteam-list-names">Николай Тарасов</dd>
-          <dd class="ourteam-list-description">Marketing</dd>
-          <dt>
+          </li>
+          <li class="ourteam-list-names">Николай Тарасов</li>
+          <li class="ourteam-list-description">Marketing</li>
+          <li>
             <img
-              src="./pics/michael.jpg"
+              src="./img/michael.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-          </dt>
-          <dd class="ourteam-list-names">Михаил Ермаков</dd>
-          <dd class="ourteam-list-description">UI Designer</dd>
-        </dl>
+          </li>
+          <li class="ourteam-list-names">Михаил Ермаков</li>
+          <li class="ourteam-list-description">UI Designer</li>
+        </ul>
       </section>
     </main>
     <footer class="footer-container">
       <!--logo container-->
-      <div>
-        <a
-          class="logo-style link"
-          href="./index.html"
-          aria-label="логотип webstudio"
-          >Web<span class="logo-whiteside">Studio</span></a
-        >
-      </div>
+
+      <a
+        class="logo-style link"
+        href="./index.html"
+        aria-label="логотип webstudio"
+        >Web<span class="logo-whiteside">Studio</span></a
+      >
+
       <!--contacts container-->
       <nav>
         <ul class="list">
